server/check.log
    Checking server v0.1.0 (/home/mrcoder/Documents/ProjectStation/medicata/server)
error: cannot find derive macro `Deserialize` in this scope
   --> src/handlers/auth.rs:366:17
    |
366 | #[derive(Debug, Deserialize)]
    |                 ^^^^^^^^^^^
    |
help: consider importing this derive macro
    |
  1 + use serde::Deserialize;
    |

error[E0277]: the trait bound `fn(State<...>, ..., ...) -> ... {update_payout_info}: Handler<_, _>` is not satisfied
   --> src/main.rs:85:50
    |
 85 |         .route("/api/pharmacy/payout-info", post(handlers::auth::update_payout_info))
    |                                             ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(State<AppState>, Claims, Json<...>) -> ... {update_payout_info}`
    |                                             |
    |                                             required by a bound introduced by this call
    |
    = note: Consider using `#[axum::debug_handler]` to improve the error message
    = help: the following other types implement trait `Handler<T, S>`:
              `MethodRouter<S>` implements `Handler<(), S>`
              `axum::handler::Layered<L, H, T, S>` implements `Handler<T, S>`
note: required by a bound in `post`
   --> /home/mrcoder/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.7.9/src/routing/method_routing.rs:443:1
    |
443 | top_level_handler_fn!(post, POST);
    | ^^^^^^^^^^^^^^^^^^^^^^----^^^^^^^
    | |                     |
    | |                     required by a bound in this function
    | required by this bound in `post`
    = note: the full name for the type has been written to '/home/mrcoder/Documents/ProjectStation/medicata/server/target/debug/deps/server-859558ee74221956.long-type-18199792003756164331.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `server` (bin "server") due to 2 previous errors
